# embedded-rust-os

./: Cargo.toml  README.md  wtf.txt
.cargo/: config.toml
src/: gdt.rs  interrupts.rs  lib.rs  main.rs  vga_buffer.rs
