[package]
name = "embedded-rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
# This disable stack unwinding by aborting instead
# resolve the issue of language item required, but not found: `eh_personality`
# and reduces the binary size
panic = "abort"

[profile.release]
# This disable stack unwinding by aborting instead
# resolve the issue of language item required, but not found: `eh_personality`
# and reduces the binary size
#panic = "abort"

[dependencies]
bootloader = "0.9.23"
