[package]
name = "embedded-rust-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev]
# This disable stack unwinding by aborting instead
# resolve the issue of language item required, but not found: `eh_personality`
# and reduces the binary size
panic = "abort"
# This disable stack unwinding by aborting instead
# resolve the issue of language item required, but not found: `eh_personality`
# and reduces the binary size
#panic = "abort"

[dependencies]
bootloader = "0.9.23"
# we have no_std so lazy_static can't for example work in the heap
# it uses spin's crate once instead
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
# this should come with lazy_static, I have to dig more crate dependencies
spin = "0.9.8"
x86_64 = "0.14.11"
